# scripture-rag

./: .gitignore  LICENSE  README.md  pyproject.toml
src/scripture_rag/: __init__.py  book_mapping.py  cli.py  downloader.py  indexer.py  parser.py  query.py  reranker.py  vector_store.py
tests/: conftest.py  test_book_mapping.py  test_downloader.py  test_parser.py  test_query.py  test_reranker.py
