[project]
name = "scripture-rag"
version = "0.1.0"
description = "Run RAG queries on the standard works"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "chromadb>=1.1.1",
  "sentence-transformers>=3.0.0",
  "google-generativeai>=0.8.0",
  "torch>=2.0.0",
  "requests>=2.31.0",
]

[project.scripts]
scripture-rag = "scripture_rag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scripture_rag"]

[dependency-groups]
dev = [
  "ruff>=0.14.1",
  "pytest>=8.0.0",
  "pytest-mock>=3.14.0",
  "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "N", "W"]
